--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         </div>
         <div id="template">
             <div class="card">
-                <img class="card_img" src="./img/bench.JPG">
+                <img class="card_img" src="./img/bench.jpg">
                 <p class="card_title"> Bench press </p>
                 <input class="card_button" type="button" value="자세히">
             </div>
             <div class="card">
-                <img class="card_img" src="./img/squat.PNG">
+                <img class="card_img" src="./img/squat.png">
                 <p class="card_title"> Squat </p>
                 <input class="card_button" type="button" value="자세히">
             </div>
             <div class="card">
-                <img class="card_img" src="./img/dead.JPG">
+                <img class="card_img" src="./img/dead.jpg">
                 <p class="card_title"> Dead lift </p>
                 <input class="card_button" type="button" value="자세히">
             </div>
